chart using SVG

--- a/index.html
+++ b/index.html
@@ -2,38 +2,56 @@
 <html>
 <head>
   <title>D3 - Data Driven Documents</title>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="../node_modules/d3/d3.min.js"></script>
   <style type="text/css">
 
-    body
-    {
+    body {
       padding-top: 50px;
       padding-left: 100px;
     }
 
-    .bar
-    {
+    #chartArea {
+      width: 400px;
+      height: 300px;
+      background-color: #CCC;
+    }
+
+    .bar {
       display: inline-block;
       width: 20px;
       height: 75px; /* Gets overriden by D3-assigned height below */
       margin-right: 2px;
-      background-color: teal;
+      fill: teal;
     }
 
   </style>
 </head>
 <body>
+<div id="chartArea"></div>
 <script type="text/javascript">
 
-  var dataset = [ 5, 10, 15, 20, 25, 40 ];
+  var dataset = [ 5, 10, 15, 20, 25 ];
 
-  d3.select('body').selectAll('div')
+  var svg = d3.select('#chartArea').append('svg')
+    .attr('width', 400)
+    .attr('height', 300);
+
+  var multiplier = 8;
+
+  svg.selectAll('rect')
     .data(dataset)
     .enter()
-    .append('div')
+    .append('rect')
     .attr('class', 'bar')
-    .style('height', function (d) {
-      return d * 5 + 'px';
+    .attr('x', function (d, i) {
+      return i * 22;
+    })
+    .attr('y', function (d) {
+      return 300 - d * multiplier;
+    })
+    .attr('width', 20)
+    .attr('height', function (d) {
+      return d * multiplier;
     });
 
 </script>
