--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
 <script type="text/javascript">
 
   var dataset = [ 5, 10, 15, 20, 25 ];
+  var w = 400, h=300; 
 
   var svg = d3.select('#chartArea').append('svg')
-    .attr('width', 400)
-    .attr('height', 300);
+    .attr('width', w)
+    .attr('height', h);
 
-  var multiplier = 9;
+    var yScale = d3.scale.linear()
+      .domain([0,50])
+      .range([0,h]);
+
+  var multiplier = 8;
 
   svg.selectAll('rect')
     .data(dataset)
@@ -43,11 +48,11 @@
       return i * 22;
     })
     .attr('y', function (d) {
-      return 300 - d * multiplier;
+      return h - yScale(d);
     })
     .attr('width', 20)
     .attr('height', function (d) {
-      return d * multiplier;
+      return yScale(d); 
     });
 
 </script>
