--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     }
 
     #chartArea {
-      
+      width: 400px;
+      height: 300px;
       background-color: #CCC;
     }
 
@@ -26,7 +27,7 @@
 <div id="chartArea"></div>
 <script type="text/javascript">
 
-  var dataset = _.map(_.range(15), function (i ) {
+  var dataset = _.map(_.range(25), function (i ) {
     return Math.random() * 100;
   });
 
@@ -35,6 +36,11 @@
   var svg = d3.select('#chartArea').append('svg')
     .attr('width', w)
     .attr('height', h);
+
+    var xScale = d3.scale.ordinal()
+    .domain(dataset)
+    .rangeBands([0, w], 0.2, 0.3);
+    // range, padding inbetween each band 0.5 -> width of band, padding on outside of bands  
 
   var yScale = d3.scale.linear()
   // look at dataset to set max domain 
@@ -47,12 +53,12 @@
     .append('rect')
     .attr('class', 'bar')
     .attr('x', function (d, i) {
-      return i * 22;
+      return xScale(d);
     })
     .attr('y', function (d) {
       return h - yScale(d);
     })
-    .attr('width', 20)
+    .attr('width', xScale.rangeBand())
     .attr('height', function (d) {
       return yScale(d); 
     });
