--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
     return Math.random() * 100;
   });
 
-  var w = 400, h=300; 
+  var margin = {top: 10, right: 10, bottom: 10, left: 10}; 
+  var w = 400 - margin.left - margin.right, h=300-margin.top-margin.bottom; 
 
   var svg = d3.select('#chartArea').append('svg')
-    .attr('width', w)
-    .attr('height', h);
+    .attr('width', w + margin.left + margin.right)
+    .attr('height', h + margin.top + margin.bottom)
+    .append('g')
+    .attr('transform', 'translate(' + margin.left + ', ' + margin.top + ')'); 
 
     var xScale = d3.scale.ordinal()
     .domain(dataset)
