--- a/bubble.html
+++ b/bubble.html
@@ -7,8 +7,9 @@
     <style type="text/css">
 
         body {
-            padding-top: 50px;
-            padding-left: 30px;
+            padding-top: 20px;
+            padding-left: 15px;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         #chartArea {
@@ -33,11 +34,39 @@
             stroke-weight: 1px;
         }
 
+        .axis path, .axis line {
+            fill: none ;
+            stroke: #000;
+            stroke-width: 3px;
+            shape-rendering: crispEdges;
+        }
+
+
     </style>
 </head>
 <body>
 <div id="chartArea"></div>
+<button onclick="update()"> Update </button>
 <script type="text/javascript">
+
+function update(){
+    _.each(dataset, function(datum){
+        datum.x = Math.round(Math.random()*100);
+        datum.y = Math.round(Math.random()*100);
+        datum.r = Math.round(5 + Math.random()*10);
+    })
+
+    svg.selectAll('circle')
+    .attr('cx', function(d){
+        return xScale(d.x); 
+    })
+    .attr('cy', function(d){
+        return yScale(d.y); 
+    })
+    .attr('r', function(d){
+        return d.r;  
+    }); 
+}
 
     var dataset = _.map(_.range(25), function (i) {
         return {
@@ -47,7 +76,7 @@
         };
     });
 
-    var margin = {top: 0, right: 0, bottom: 0, left: 0};
+    var margin = {top: 20, right: 20, bottom: 40, left: 40};
     var w = 400 - margin.left - margin.right,
             h = 300 - margin.top - margin.bottom;
 
@@ -61,11 +90,38 @@
             .domain([0, 100])
             .range([0, w]);
 
+    var xAxis = d3.svg.axis()
+        .scale(xScale)
+        .orient('bottom')
+        .ticks(5)
+        .innerTickSize(6)
+        .outerTickSize(12)
+        .tickPadding(12);
+
+    svg.append('g')
+        .attr('class', 'x axis')
+        .attr('transform', 'translate(0, '+ (h + 0) + ')')
+        .call(xAxis);
+
+
+
     var yScale = d3.scale.linear()
             .domain([0, d3.max(dataset, function (d) {
                 return d.y;
             })])
             .range([h, 0]);
+
+     var yAxis = d3.svg.axis()
+        .scale(yScale)
+        .orient('left');
+
+    svg.append('g')
+        .attr('class', 'y axis')
+        .attr('transform', 'translate(0, 0)')
+        .call(yAxis);
+
+
+
 
     svg.selectAll('circle')
             .data(dataset)
