added notes on padding

--- a/bubble.html
+++ b/bubble.html
@@ -110,6 +110,7 @@ function update(){
         .attr('class', 'x axis')
         .attr('transform', 'translate(0, '+ (h + 0) + ')')
         .call(xAxis);
+        // Add tranlation padding so that data does not rest on the axis! 
 
 
 
