multiple color transitions

--- a/bubble.html
+++ b/bubble.html
@@ -65,13 +65,19 @@ function update(){
     .attr('cx', function(d){
         return xScale(d.x); 
     })
+    .style('fill', 'orange')
+    .transition()
+    .duration(500)
     .attr('cy', function(d){
         return yScale(d.y); 
     })
+    .style('fill', 'blue')
+    .transition()
+    .duration(500)
     .attr('r', function(d){
         return d.r;  
     })
-    .style('fill', 'orange')
+    .style('fill', 'green')
 }
 
 
