--- a/bubble.html
+++ b/bubble.html
@@ -49,14 +49,8 @@
 <button onclick="update()"> Update </button>
 <script type="text/javascript">
 
-function update(){
-    _.each(dataset, function(datum){
-        datum.x = Math.round(Math.random()*100);
-        datum.y = Math.round(Math.random()*100);
-        datum.r = Math.round(5 + Math.random()*10);
-    })
-
-    svg.selectAll('circle')
+function steppedTransition (selection) {
+    selection
     .transition()
     .duration(500)
     .delay(function(d,i){
@@ -78,6 +72,73 @@ function update(){
         return d.r;  
     })
     .style('fill', 'green')
+
+}
+
+function steppedTransition (selection) {
+    selection
+    .transition()
+    .duration(500)
+    .delay(function(d,i){
+        return i*25;    
+    })
+    .attr('cx', function(d){
+        return xScale(d.x); 
+    })
+    .style('fill', 'orange')
+    .transition()
+    .duration(500)
+    .attr('cy', function(d){
+        return yScale(d.y); 
+    })
+    .style('fill', 'blue')
+    .transition()
+    .duration(500)
+    .attr('r', function(d){
+        return d.r;  
+    })
+    .style('fill', 'green')
+
+}
+
+function unicorn (selection) {
+    selection
+    .transition()
+    .duration(500)
+    .delay(function(d,i){
+        return i*25;    
+    })
+    .attr('cx', function(d){
+        return xScale(d.x); 
+    })
+    .style('fill', 'orange')
+    .transition()
+    .duration(500)
+    .attr('cy', function(d){
+        return yScale(d.y); 
+    })
+    .style('fill', 'blue')
+    .transition()
+    .duration(500)
+    .attr('r', function(d){
+        return d.r;  
+    })
+    .style("fill",function() {
+    return "hsl(" + Math.random() * 360 + ",100%,50%)";
+    });
+
+}
+
+
+function update(){
+    _.each(dataset, function(datum){
+        datum.x = Math.round(Math.random()*100);
+        datum.y = Math.round(Math.random()*100);
+        datum.r = Math.round(5 + Math.random()*10);
+    })
+
+    svg.selectAll('circle').call(unicorn);
+    
 }
 
 
